--- a/src/styles/pages/_index.scss
+++ b/src/styles/pages/_index.scss
@@ -27,6 +27,8 @@ h3 {
 }
 .hwm {
   width: -webkit-fill-available;
+  padding: 3px 15px 0px 12px;
+  margin-top: 0px;
 }
 
 .container {
@@ -116,9 +118,9 @@ h3 {
   background-position: 60% 50%;
   background-repeat: no-repeat;
   background-size: cover;
-  height: 200px;
-  margin: 80px 0;
+  height: 300px;
+  margin-top: 80px;
   @media screen and (min-width:1024px) {
-    height: 400px;
+    height: 480px;
   }
 }
