--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -11,7 +11,7 @@ footer {
   section {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: unset;
     justify-content: space-between;
     margin: 60px 0;
     @media screen and (min-width:630px) {
@@ -41,5 +41,8 @@ footer {
   }
   a:hover {
     color: rgb(202, 129, 32);
+  }
+  #container {
+    max-width: 300px;
   }
 }
